rompe en laptop

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	</head>
 	<body>
 		<header>
-			<nav role="navigation" class="mobile-nav">
-				<div class="nav__menu container">
+			<nav role="navigation" class="mobile-nav container">
+				<div class="nav__menu">
 					<div class="trello-logo">
 						<img src="/media/logos/trello-logo.png" alt="Logo de Trello" />
 					</div>
@@ -27,40 +27,52 @@
 					</div>
 				</div>
 			</nav>
-            <nav role="navigation" class="desktop-nav">
+			<nav role="navigation" class="desktop-nav container">
 				<div class="nav__menu container">
 					<div class="trello-logo">
 						<img src="/media/logos/trello-logo.png" alt="Logo de Trello" />
 					</div>
 					<div class="menu__items">
-                        <ul>
-                            <li>Funciones<img src="/media/icons/down-arrow.svg"/></li>
-                            <li>Soluciones<img src="/media/icons/down-arrow.svg"/></li>
-                            <li>Planes<img src="/media/icons/down-arrow.svg"/></li>
-                            <li>Precios</li>
-                            <li>Recursos<img src="/media/icons/down-arrow.svg"/></li>
-                        </ul>
-                    </div>
+						<ul>
+							<li>
+								Funciones
+								<img src="/media/icons/down-arrow.svg" />
+							</li>
+							<li>
+								Soluciones
+								<img src="/media/icons/down-arrow.svg" />
+							</li>
+							<li>
+								Planes
+								<img src="/media/icons/down-arrow.svg" />
+							</li>
+							<li>Precios</li>
+							<li>
+								Recursos
+								<img src="/media/icons/down-arrow.svg" />
+							</li>
+						</ul>
+					</div>
 				</div>
-                <div class="login">
-                    <div class="login-button" role="button">
-                        <p>Iniciar sesión</p>
-                    </div>
-                    <div class="login-button" role="button"><p>Obtener Trello gratis</p></div>
-                </div>
+				<div class="login">
+					<div class="login-button" role="button">
+						<p>Iniciar sesión</p>
+					</div>
+					<div class="login-button blue" role="button">
+						<p>Obtener Trello gratis</p>
+					</div>
+				</div>
 			</nav>
 		</header>
 		<main>
-			<section id="hero">
-				<div class="advise">
-					<div class="advise__text container"></div>
+			<section id="advise">
+				<div class="advise__text container">
 					<p>
 						Accelerate your teams' work with Atlassian Intelligence (AI)
 						features 🤖 now available for all Premium and Enterprise!
 						<a href="#">Learn more</a>
 					</p>
 				</div>
-                <div class="presentation"></div>
 			</section>
 		</main>
 	</body>
