hero mobile + tablet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 			href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css"
 		/>
 		<link rel="stylesheet" href="/styles/index.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet"
+		/>
 		<title>
 			Gestiona los proyectos de tu equipo desde cualquier lugar | Trello
 		</title>
@@ -58,7 +64,7 @@
 					<div class="login-button" role="button">
 						<p>Iniciar sesión</p>
 					</div>
-					<div class="login-button blue" role="button">
+					<div class="login-button blue-button" role="button">
 						<p>Obtener Trello gratis</p>
 					</div>
 				</div>
@@ -72,6 +78,40 @@
 						features 🤖 now available for all Premium and Enterprise!
 						<a href="#">Learn more</a>
 					</p>
+				</div>
+			</section>
+			<section id="hero">
+				<div class="hero__content">
+					<div class="hero__texts">
+						<h1>
+							Trello unifica tus tareas, compañeros de equipo y herramientas
+						</h1>
+						<p>Mantenlo todo en el mismo lugar, aunque tu equipo no lo esté.</p>
+					</div>
+					<div class="hero__form">
+						<div class="form__inputs">
+							<label for="email">
+								<input
+									type="email"
+									id="email"
+									placeholder="Correo electrónico"
+								/>
+							</label>
+							<div class="register-button blue-button" role="button">
+								<p>Regístrate, ¡es gratis!</p>
+							</div>
+						</div>
+						<div class="hero-video">
+							<p>Ver el vídeo</p>
+							<img src="/media/icons/play-button.png" alt="" />
+						</div>
+					</div>
+					<div class="hero__img">
+						<img
+							src="/media/images/trello-collage.png"
+							alt="Imagen collage de la aplicación de Trello"
+						/>
+					</div>
 				</div>
 			</section>
 		</main>
