section productivity done

--- a/index.html
+++ b/index.html
@@ -129,43 +129,71 @@
 					</div>
 				</div>
 			</section>
-			<section id="productivity">
-				<div class="productivity__content container">
-					<div class="productivy__texts">
-						<div class="headings">
-							<small>El Abc de Trello</small>
-							<h2>Un centro neurálgico de productividad</h2>
-						</div>
-						<p>
-							Sencillo, flexible y potente. Todo lo que necesitas son tableros,
-							listas y tarjetas para poder ver de forma clara quién está
-							haciendo qué y las tareas pendientes. Más información en nuestra
-							<a href="#">guía de inicio</a>
-						</p>
-					</div>
-					<div class="productivity__graphics">
-						<div class="graphics__images">
-							<div class="images__carousel">
-								<img
-									src="/media/images/trello-carrusel-1.webp"
-									alt="Imagen de la aplicación de Trello"
-									width="425px"
-								/>
+			<section id="articles">
+				<article class="productivity">
+					<div class="productivity__content container">
+						<div class="productivy__texts">
+							<div class="headings">
+								<small>El Abc de Trello</small>
+								<h2>Un centro neurálgico de productividad</h2>
 							</div>
-							<div class="images__card">
-								<div class="card__texts">
-									<h4>Tableros</h4>
-									<p>
-										Los tableros de Trello mantienen las tareas organizadas y
-										ayudan a que el trabajo avance. Podrás verlo todo de un solo
-										vistazo, desde las cosas pendientes a las que ya están
-										terminadas.
-									</p>
+							<p class="paragraphs">
+								Sencillo, flexible y potente. Todo lo que necesitas son
+								tableros, listas y tarjetas para poder ver de forma clara quién
+								está haciendo qué y las tareas pendientes. Más información en
+								nuestra
+								<a href="#">guía de inicio</a>
+								.
+							</p>
+						</div>
+						<div class="productivity__graphics">
+							<div class="graphics__carousel">
+								<div class="images__carousel">
+									<img
+										src="/media/images/trello-carrusel-1.webp"
+										alt="Imagen de la aplicación de Trello"
+										width="425px"
+									/>
+								</div>
+							</div>
+							<div class="graphics__cards">
+								<div class="card">
+									<div class="card__texts">
+										<h4>Tableros</h4>
+										<p>
+											Los tableros de Trello mantienen las tareas organizadas y
+											ayudan a que el trabajo avance. Podrás verlo todo de un
+											solo vistazo, desde las cosas pendientes a las que ya
+											están terminadas.
+										</p>
+									</div>
+								</div>
+								<div class="card not-selected">
+									<div class="card__texts not-in-mobile not-selected">
+										<h4>Listas</h4>
+										<p>
+											Las diferentes fases de una tarea. Empieza con algo
+											sencillo como Pendiente, En curso o Listo, o crea un flujo
+											de trabajo a medida de las necesidades de tu equipo. No
+											hay posibilidad de equivocarse con Trello.
+										</p>
+									</div>
+								</div>
+								<div class="card not-selected">
+									<div class="card__texts not-in-mobile not-selected">
+										<h4>Tarjetas</h4>
+										<p>
+											Las tarjetas representan las tareas y las ideas e incluyen
+											toda la información necesaria para hacer el trabajo. A
+											medida que avances, mueve las tarjetas de una lista a otra
+											para mostrar su estado.
+										</p>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				</article>
 			</section>
 		</main>
 	</body>
