hero img adjusted

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 								</div>
 							</div>
 							<div class="graphics__cards">
-								<div class="card">
+								<div class="card selected">
 									<div class="card__texts">
 										<h4>Tableros</h4>
 										<p>
