workflow cards started

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 					</p>
 				</div>
 			</section>
-
 			<section id="hero">
 				<div class="hero__content container">
 					<div class="hero__info">
@@ -110,7 +109,6 @@
 										<p>Regístrate, ¡es gratis!</p>
 									</div>
 								</div>
-
 								<div class="hero__video">
 									<p>Ver el vídeo</p>
 									<img
@@ -156,9 +154,9 @@
 									/>
 								</div>
 							</div>
-							<div class="graphics__cards">
-								<div class="card selected">
-									<div class="card__texts">
+							<div class="productivity__cards">
+								<div class="productivity-card selected">
+									<div class="productivity-card__texts">
 										<h4>Tableros</h4>
 										<p>
 											Los tableros de Trello mantienen las tareas organizadas y
@@ -168,8 +166,10 @@
 										</p>
 									</div>
 								</div>
-								<div class="card not-selected">
-									<div class="card__texts not-in-mobile not-selected">
+								<div class="productivity-card not-selected">
+									<div
+										class="productivity-card__texts not-in-mobile not-selected"
+									>
 										<h4>Listas</h4>
 										<p>
 											Las diferentes fases de una tarea. Empieza con algo
@@ -179,8 +179,10 @@
 										</p>
 									</div>
 								</div>
-								<div class="card not-selected">
-									<div class="card__texts not-in-mobile not-selected">
+								<div class="productivity-card not-selected">
+									<div
+										class="productivity-card__texts not-in-mobile not-selected"
+									>
 										<h4>Tarjetas</h4>
 										<p>
 											Las tarjetas representan las tareas y las ideas e incluyen
@@ -190,6 +192,117 @@
 										</p>
 									</div>
 								</div>
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="workflow">
+					<div class="workflow__content container">
+						<div class="workflow__texts">
+							<div class="headings">
+								<small>Trello en acción</small>
+								<h2>
+									Flujos de trabajo para cualquier proyecto, grande o pequeño
+								</h2>
+							</div>
+						</div>
+						<div class="workflow__cards">
+							<div class="workflow__card__box orange-card">
+								<div class="workflow__card__content">
+									<!-- <div class="workflow__icon">
+										<img
+											src="/media/icons/folder.png"
+											alt="Icono de una carpeta naranja"
+										/>
+									</div> -->
+									<div class="workflow__card__texts">
+										<h4>Gestión de proyectos</h4>
+										<p>
+											Trello te permite mantener las tareas en orden, los plazos
+											controlados y los miembros del equipo coordinados.
+										</p>
+									</div>
+								</div>
+							</div>
+							<!-- <div class="workflow__card__box blue-card">
+								<div class="workflow__card__content">
+									<div class="workflow__icon">
+										<img
+											src="/media/icons/megaphone.png"
+											alt="Icono de un megáfono azul"
+										/>
+									</div>
+									<div class="workflow__card__texts">
+										<h4></h4>
+										<p></p>
+									</div>
+								</div>
+							</div>
+							<div class="workflow__card__box green-card">
+								<div class="workflow__card__content">
+									<div class="workflow__icon">
+										<img
+											src="/media/icons/leaf.png"
+											alt="Icono de una hoja verde"
+										/>
+									</div>
+									<div class="workflow__card__texts">
+										<h4></h4>
+										<p></p>
+									</div>
+								</div>
+							</div>
+							<div class="workflow__card__box yellow-card">
+								<div class="workflow__card__content">
+									<div class="workflow__icon">
+										<img
+											src="/media/icons/checklists.png"
+											alt="Icono de una lista de tareas amarilla"
+										/>
+									</div>
+									<div class="workflow__card__texts">
+										<h4></h4>
+										<p></p>
+									</div>
+								</div>
+							</div>
+							<div class="workflow__card__box lightblue-card">
+								<div class="workflow__card__content">
+									<div class="workflow__icon">
+										<img
+											src="/media/icons/brainstorming.svg"
+											alt="Icono de unas nubes azules"
+										/>
+									</div>
+									<div class="workflow__card__texts">
+										<h4></h4>
+										<p></p>
+									</div>
+								</div>
+							</div>
+							<div class="workflow__card__box pink-card">
+								<div class="workflow__card__content">
+									<div class="workflow__icon">
+										<img
+											src="/media/icons/book.png"
+											alt="Icono de un libro rosa"
+										/>
+									</div>
+									<div class="workflow__card__texts">
+										<h4></h4>
+										<p></p>
+									</div>
+								</div>
+							</div> -->
+						</div>
+						<div class="workflowing__texts">
+							<p class="paragraphs">
+								No hace falta que partas de cero. Pon en marcha tu flujo de
+								trabajo con un manual de estrategias probado y diseñado para
+								distintos equipos. Dale tu toque personal.
+							</p>
+							<div class="workflow__button" role="button">
+								<p>Consultar todos los casos prácticos</p>
 							</div>
 						</div>
 					</div>
