first worflow card

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
 						<div class="workflow__cards">
 							<div class="workflow__card__box orange-card">
 								<div class="workflow__card__content">
-									<!-- <div class="workflow__icon">
+									<div class="workflow__icon">
 										<img
 											src="/media/icons/folder.png"
 											alt="Icono de una carpeta naranja"
 										/>
-									</div> -->
+									</div>
 									<div class="workflow__card__texts">
 										<h4>Gestión de proyectos</h4>
 										<p>
@@ -224,7 +224,7 @@
 									</div>
 								</div>
 							</div>
-							<!-- <div class="workflow__card__box blue-card">
+							<div class="workflow__card__box blue-card">
 								<div class="workflow__card__content">
 									<div class="workflow__icon">
 										<img
@@ -237,7 +237,7 @@
 										<p></p>
 									</div>
 								</div>
-							</div>
+							</div><!-- 
 							<div class="workflow__card__box green-card">
 								<div class="workflow__card__content">
 									<div class="workflow__icon">
