workflow section done

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="workflow__card__box blue-card">
+							<!-- <div class="workflow__card__box blue-card">
 								<div class="workflow__card__content">
 									<div class="workflow__icon">
 										<img
@@ -233,11 +233,14 @@
 										/>
 									</div>
 									<div class="workflow__card__texts">
-										<h4></h4>
-										<p></p>
+										<h4>Reuniones</h4>
+										<p>
+											Consigue que las reuniones en equipo sean más productivas,
+											motivadoras e incluso divertidas.
+										</p>
 									</div>
 								</div>
-							</div><!-- 
+							</div>
 							<div class="workflow__card__box green-card">
 								<div class="workflow__card__content">
 									<div class="workflow__icon">
@@ -247,8 +250,13 @@
 										/>
 									</div>
 									<div class="workflow__card__texts">
-										<h4></h4>
-										<p></p>
+										<h4>La incorporación</h4>
+										<p>
+											La incorporación a una nueva empresa o proyecto no podría
+											ser más sencilla con el diseño visual de Trello, que
+											muestra las tareas pendientes, los recursos y el
+											seguimiento del progreso.
+										</p>
 									</div>
 								</div>
 							</div>
@@ -261,8 +269,13 @@
 										/>
 									</div>
 									<div class="workflow__card__texts">
-										<h4></h4>
-										<p></p>
+										<h4>Gestión de tareas</h4>
+										<p>
+											Usa Trello para rastrear, gestionar, llevar a cabo y unir
+											tareas como las piezas de un rompecabezas, y hacer que los
+											proyectos de tu equipo tengan resultados positivos y
+											constantes.
+										</p>
 									</div>
 								</div>
 							</div>
@@ -275,8 +288,12 @@
 										/>
 									</div>
 									<div class="workflow__card__texts">
-										<h4></h4>
-										<p></p>
+										<h4>Lluvia de ideas</h4>
+										<p>
+											Da rienda suelta a la creatividad de tu equipo y mantén la
+											visibilidad de las ideas, la colaboración en ellas y su
+											utilidad práctica.
+										</p>
 									</div>
 								</div>
 							</div>
@@ -289,19 +306,23 @@
 										/>
 									</div>
 									<div class="workflow__card__texts">
-										<h4></h4>
-										<p></p>
+										<h4>Centro de recursos</h4>
+										<p>
+											Ahorra tiempo con un centro bien diseñado que ayuda a los
+											equipos a encontrar información de forma sencilla y
+											rápida.
+										</p>
 									</div>
 								</div>
 							</div> -->
 						</div>
-						<div class="workflowing__texts">
+						<div class="workflow__info">
 							<p class="paragraphs">
 								No hace falta que partas de cero. Pon en marcha tu flujo de
 								trabajo con un manual de estrategias probado y diseñado para
 								distintos equipos. Dale tu toque personal.
 							</p>
-							<div class="workflow__button" role="button">
+							<div class="action__button" role="button">
 								<p>Consultar todos los casos prácticos</p>
 							</div>
 						</div>
