preview article done

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					</div>
 				</div>
 			</nav>
+
 			<nav role="navigation" class="desktop-nav">
 				<div class="nav__menu container">
 					<div class="trello-logo">
@@ -69,6 +70,7 @@
 					</div>
 				</div>
 			</nav>
+			<!-- <div class="desktop-nav empty-block"></div> -->
 		</header>
 		<main>
 			<section id="advise">
@@ -224,7 +226,7 @@
 									</div>
 								</div>
 							</div>
-							<!-- <div class="workflow__card__box blue-card">
+							<div class="workflow__card__box blue-card">
 								<div class="workflow__card__content">
 									<div class="workflow__icon">
 										<img
@@ -314,7 +316,7 @@
 										</p>
 									</div>
 								</div>
-							</div> -->
+							</div>
 						</div>
 						<div class="workflow__info">
 							<p class="paragraphs">
@@ -324,6 +326,80 @@
 							</p>
 							<div class="action__button" role="button">
 								<p>Consultar todos los casos prácticos</p>
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="preview">
+					<div class="preview__content container">
+						<div class="preview__heading">
+							<div class="preview__heading__texts">
+								<h2>Verás el trabajo de otra manera</h2>
+								<p>
+									Visualiza los proyectos de tu equipo desde todos los ángulos y
+									aporta una nueva perspectiva a la tarea en cuestión.
+								</p>
+							</div>
+							<div class="action__button" role="button">
+								<p>Descubre todas las vistas de Trello</p>
+							</div>
+						</div>
+						<div class="preview__images">
+							<div class="preview__card">
+								<div class="preview__image">
+									<img
+										src="./media/images/preview-chronogram.webp"
+										alt="imagen del calendario de Trello"
+									/>
+								</div>
+								<div class="preview__texts">
+									<div class="preview__texts__title">
+										<img
+											src="./media/icons/task-list.png"
+											alt="icono de una lista de tareas"
+											class="not-in-mobile"
+										/>
+										<small>Cumple todos los plazos</small>
+									</div>
+									<div class="preview__texts__content">
+										<p>
+											Con la vista de Cronograma llevarás al día todas las
+											tareas, desde los sprints semanales a la planificación
+											anual. Echa un vistazo a las próximas fases de la
+											canalización e identifica las carencias que puedan impedir
+											el progreso de tu equipo.
+										</p>
+										<a href="#">Más información sobre la vista de Cronograma</a>
+									</div>
+								</div>
+							</div>
+							<div class="preview__card desktop-reverse-order">
+								<div class="preview__image">
+									<img
+										src="./media/images/preview-calendar.webp"
+										alt="imagen del calendario de Trello"
+									/>
+								</div>
+								<div class="preview__texts">
+									<div class="preview__texts__title">
+										<img
+											src="./media/icons/calendar.png"
+											alt="icono de una lista de calendario"
+											class="not-in-mobile"
+										/>
+										<small>Controla las tareas</small>
+									</div>
+									<div class="preview__texts__content">
+										<p>
+											Empieza cada día sin sorpresas. Tanto si tienes que
+											programar una planificación editorial o simplemente
+											mantenerte al tanto de las tareas, la vista de Calendario
+											es como una bola de cristal que te da una visión clara del
+											trabajo que hay por delante.
+										</p>
+										<a href="#">Más información sobre la vista de Calendario</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
