customization article done

--- a/index.html
+++ b/index.html
@@ -404,6 +404,86 @@
 						</div>
 					</div>
 				</article>
+				<article class="customization">
+					<div class="customization__content container">
+						<div class="customization__heading">
+							<div class="headings">
+								<small>Formas eficaces de crecer</small>
+								<h2>Haz más con Trello</h2>
+							</div>
+							<p class="paragraphs">
+								Con las intuitivas funciones de Trello cualquier equipo puede
+								configurar y personalizar rápidamente flujos de trabajo para
+								casi todo.
+							</p>
+						</div>
+						<div class="customization__cards">
+							<div class="customization__card">
+								<div class="customization__card__heading">
+									<div class="customization__card__image">
+										<img
+											src="./media/images/puzzle.svg"
+											alt="Imagen de un puzzle"
+										/>
+									</div>
+									<div class="customization__card__texts">
+										<h3>Integraciones</h3>
+										<p>
+											Integra las aplicaciones que tu equipo ya usa en tu flujo
+											de trabajo de Trello o añade un Power-Up que te ayude con
+											necesidades concretas.
+										</p>
+									</div>
+								</div>
+								<div class="action__button" role="button">
+									<p>Busca integraciones</p>
+								</div>
+							</div>
+							<div class="customization__card">
+								<div class="customization__card__heading">
+									<div class="customization__card__image">
+										<img
+											src="./media/images/gears.svg"
+											alt="Imagen de dos engranajes"
+										/>
+									</div>
+									<div class="customization__card__texts">
+										<h3>Automatización de Butler</h3>
+										<p>
+											En cada tablero de Trello se crea una automatización sin
+											código. Céntrate en el trabajo que es más importante y
+											deja que los robots hagan todo lo demás.
+										</p>
+									</div>
+								</div>
+								<div class="action__button" role="button">
+									<p>Conoce la automatización</p>
+								</div>
+							</div>
+							<div class="customization__card">
+								<div class="customization__card__heading">
+									<div class="customization__card__image">
+										<img
+											src="./media/images/search-value.svg"
+											alt="Imagen de una lupa aumentando un diamante"
+										/>
+									</div>
+									<div class="customization__card__texts">
+										<h3>Trello Enterprise</h3>
+										<p>
+											La herramienta de productividad que hace las delicias de
+											los equipos, con todas las funciones y la seguridad
+											necesarias para el escalado.
+										</p>
+									</div>
+								</div>
+								<div class="action__button" role="button">
+									<p>Explora Enterprise</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</article>
 			</section>
 		</main>
 	</body>
