quotes section done

--- a/index.html
+++ b/index.html
@@ -485,6 +485,43 @@
 					</div>
 				</article>
 			</section>
+			<section id="quotes">
+				<div class="quotes__content container">
+					<div class="quotes__texts">
+						<div class="quotes__texts__opinion">
+							<p>
+								[Trello es] fabuloso para simplificar procesos complejos. Como
+								directora, puedo dividirlos [los procesos] en partes pequeñas
+								para el equipo y luego delegarlos, sin perder la perspectiva
+								global.
+							</p>
+							<span>___________________</span>
+						</div>
+						<div class="quotes__author">
+							<div class="author__name">
+								<p>Joey Rosenberg</p>
+								<p>Directora de Liderazgo Global de Women Who Code</p>
+							</div>
+							<div class="quotes__info">
+								<div class="author__company">
+									<img
+										src="./media/logos/womenwhocode-logo.svg"
+										alt="Logo de Women Who Code"
+									/>
+								</div>
+								<a href="#">Leer caso práctico</a>
+							</div>
+						</div>
+					</div>
+					<div class="quotes__survey">
+						<p>
+							Según el 75 % de las organizaciones, Trello aporta valor a su
+							negocio en 30 días.
+						</p>
+						<a href="#">Encuesta sobre Trello de TechValidate</a>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
