plans section done

--- a/index.html
+++ b/index.html
@@ -522,6 +522,162 @@
 					</div>
 				</div>
 			</section>
+			<section id="purchase">
+				<div class="purchase__content container">
+					<div class="purchase__plans">
+						<div class="plans__intro">
+							<div class="intro__heading">
+								<h2>El precio de Trello a tu manera</h2>
+								<p>
+									Trello infunde confianza a millones de personas y da alas a
+									equipos de todo el mundo.
+								</p>
+							</div>
+							<div class="action__button blue-button">
+								<p>Comparar planes</p>
+							</div>
+						</div>
+						<div class="plans__comparison">
+							<div class="plan__card">
+								<div class="card__info">
+									<h4>Free</h4>
+									<div class="plan__price">
+										<p>
+											$
+											<span class="price__number">0</span>
+											USD
+										</p>
+										<small>Gratuito para todo el equipo</small>
+									</div>
+									<div class="plan__description">
+										<p>
+											Para personas o equipos que quieren organizar cualquier
+											proyecto que se les ocurra.
+										</p>
+									</div>
+								</div>
+								<div class="plan__engage">
+									<div class="action__button plan-button">
+										<p>Empezar ahora mismo</p>
+									</div>
+								</div>
+							</div>
+							<div class="plan__card">
+								<div class="card__info">
+									<h4 class="plan__name">Standard</h4>
+									<div class="plan__price">
+										<p>
+											$
+											<span>5</span>
+											USD
+										</p>
+										<small>
+											por usuario al mes con facturación anual ($6 con
+											facturación mensual)
+										</small>
+									</div>
+									<div class="plan__description">
+										<p>
+											Para los equipos pequeños que necesitan gestionar el
+											trabajo y escalar la colaboración.
+										</p>
+									</div>
+								</div>
+								<div class="plan__engage">
+									<div class="action__button plan-button">
+										<p>Regístrate ahora</p>
+									</div>
+									<a href="#">Más información sobre Standard</a>
+								</div>
+							</div>
+							<div class="plan__card plan-selected">
+								<div class="card__info">
+									<h4 class="plan__name">Premium</h4>
+									<div class="plan__price">
+										<p>
+											$
+											<span class="price__number">10</span>
+											USD
+										</p>
+										<small>
+											por usuario al mes con facturación anual ($12.50 con
+											facturación mensual)
+										</small>
+									</div>
+									<div class="plan__description">
+										<p>
+											Para equipos que necesiten supervisar y visualizar varios
+											proyectos de varias maneras, como en tableros,
+											cronogramas, calendarios, etc.
+										</p>
+									</div>
+								</div>
+								<div class="plan__engage">
+									<div class="action__button plan-button button-highlight">
+										<p>Probar gratis</p>
+									</div>
+									<a href="#">Más información sobre Premium</a>
+								</div>
+							</div>
+							<div class="plan__card">
+								<div class="card__info">
+									<h4 class="plan__name">Enterprise</h4>
+									<div class="plan__price">
+										<p>
+											$
+											<span class="price__number">17.50</span>
+											USD
+										</p>
+										<small>
+											por usuario al mes con facturación anual ($210.00 precio
+											anual por usuario)
+										</small>
+									</div>
+									<div class="plan__description">
+										<p>
+											Para organizaciones que necesitan conectar el trabajo de
+											distintos equipos con mayor seguridad y más controles.
+										</p>
+										<p>
+											Coste estimado para
+											<span>50</span>
+											usuarios
+										</p>
+										<input type="range" />
+									</div>
+								</div>
+								<div class="plan__engage">
+									<div class="action__button plan-button">
+										<p>Contacto con el departamento de ventas</p>
+									</div>
+									<a href="#">Más información sobre Enterprise</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="affiliated__companies">
+						<p>
+							Únete a los más de 2 000 000 de equipos de todo el mundo que
+							utilizan Trello para ser más productivos.
+						</p>
+						<div class="companies__logos not-in-desktop not-in-tablet">
+							<img
+								src="/media/logos/companies-logos-mobile.svg"
+								alt="Logos de compañías afiliadas"
+							/>
+						</div>
+						<div class="companies__logos not-in-mobile show-in-tablet">
+							<img
+								src="/media/logos/companies-logos-tablet-desktop.svg"
+								alt="Logos de compañías afiliadas"
+							/>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
+		<!-- <footer>
+			<section id="engage"></section>
+		</footer> -->
 	</body>
 </html>
